# FlashCards

./: DEV.md  README.md  gui_reference.json  handle_json.py  main_app.py  pyproject.toml  test_handle_json.py  topic.json  validate_file.json
resources/: a_plus.json  bad_file.json  it.json  new_topic.json
